0x07-python-test_driven_development/doctest_output.txt
Trying:
    add_integer = __import__('0-add_integer').add_integer
Expecting nothing
ok
Trying:
    add_integer(1, 2)
Expecting:
    3
ok
Trying:
    add_integer(-1, -2)
Expecting:
    -3
ok
Trying:
    add_integer(100, -2)
Expecting:
    98
ok
Trying:
    add_integer(-100, 2)
Expecting:
    -98
ok
Trying:
    add_integer(100.3, 2.5)
Expecting:
    102
ok
Trying:
    add_integer(2.4, 3.6)
Expecting:
    6
**********************************************************************
File "./tests/0-add_integer.txt", line 23, in 0-add_integer.txt
Failed example:
    add_integer(2.4, 3.6)
Expected:
    6
Got:
    5
Trying:
    add_integer(2)
Expecting:
    100
ok
Trying:
    add_integer(9223372036854775807, -9223372036854775808)
Expecting:
    -1
ok
Trying:
    add_integer("1", "2")
Expecting:
    Traceback (most recent call last):
    ...
    TypeError: a must be an integer
ok
Trying:
    add_integer(0, "2")
Expecting:
    Traceback (most recent call last):
    ...
    TypeError: b must be an integer
ok
Trying:
    add_integer("1", 2)
Expecting:
    Traceback (most recent call last):
    ...
    TypeError: a must be an integer
ok
Trying:
    add_integer(0, {'a': 2, 'b': 3})
Expecting:
    Traceback (most recent call last):
    ...
    TypeError: b must be an integer
ok
Trying:
    add_integer(0, float("NaN")
Expecting:
    Traceback (most recent call last):
    ...
    ValueError: cannot convert float NaN to integer
**********************************************************************
File "./tests/0-add_integer.txt", line 50, in 0-add_integer.txt
Failed example:
    add_integer(0, float("NaN")
Expected:
    Traceback (most recent call last):
    ...
    ValueError: cannot convert float NaN to integer
Got:
    Traceback (most recent call last):
      File "/usr/lib/python3.8/doctest.py", line 1336, in __run
        exec(compile(example.source, filename, "single",
      File "<doctest 0-add_integer.txt[13]>", line 1
        add_integer(0, float("NaN")
                                  ^
    SyntaxError: unexpected EOF while parsing
Trying:
    add_integer(float("inf"), 2)
Expecting:
    Traceback (most recent call last):
    ...
    OverflowError: cannot convert float infinity to integer
ok
Trying:
    add_integer(float("-inf"), 2)
Expecting:
    Traceback (most recent call last):
    ...
    OverflowError: cannot convert float infinity to integer
ok
**********************************************************************
1 items had failures:
   2 of  16 in 0-add_integer.txt
16 tests in 1 items.
14 passed and 2 failed.
***Test Failed*** 2 failures.
